# linear-regression-giza-example

./: README.md  goerli.deployments.txt  pyproject.toml
artifacts/: c3_tensor_loader.json  c4_tensor_loader.json  c5_tensor_loader.json  contract.json  small_math.json  tensor_data_types.json  tensor_error_handler.json  tensor_operations.json  tensor_utils.json
artifacts/abis/: contract.json
contracts/: c3_tensor_loader.cairo  c4_tensor_loader.cairo  c5_tensor_loader.cairo  contract.cairo
contracts/onnx_cairo/operators/: add.cairo  mul.cairo  reduce_sum.cairo  tensor.cairo
contracts/onnx_cairo/utils/: math.cairo
tests/: test_contract.py
