[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = "Scaffolding template for Cairo packages."
authors = ["John Doe <john.doe@email.com>"]
keywords = ["felucca"]
include = ["linear_regression/*.cairo", "linear_regression/*/*.cairo"]

[tool.poetry.dependencies]
python = ">=3.7.11,<3.9"
sympy = "^1.10"
cairo-nile = "^0.6.1"
"starknet.py" = "^0.3.1-alpha.0"
fastecdsa = "^2.2.3"
ecdsa = "^0.17.0"
starknet-devnet = "^0.2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-asyncio = "^0.18.2"
black = {version = "^22.1.0", allow-prereleases = true}
felucca = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"