[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "contracts"
version = "0.1.0"
description = "Scaffolding template for Cairo packages."
authors = [ "John Doe <john.doe@email.com>",]
keywords = [ "felucca",]
include = [ "linear_regression/*.cairo", "linear_regression/*/*.cairo",]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
sympy = "^1.11.1"
cairo-nile = "^0.12.0"
cairo-math-64x61 = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-asyncio = "^0.20.3"
felucca = "^0.2.5"

[felucca.contracts.cairo_math_64x61]
version = "2.1.1"
type = "python"
location = [ "cairo_math_64x61",]

[tool.poetry.dev-dependencies.black]
version = "^22.1.0"
allow-prereleases = true
